// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
exports.foo = 1;

=====================================output=====================================
// @flow
exports.foo = 1;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
const A = require("./a");
(A: { foo: number });

=====================================output=====================================
// @flow
const A = require("./a");
(A: { foo: number });

================================================================================
`;
